export const snapshot = {};

snapshot[`molt 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules

Options:

  -h, --help               - Show this help.                                              
  -v, --version            - Print version info.                                          
  --import-map   <file>    - Specify import map file                                      
  --ignore       <deps>    - Ignore dependencies                                          
  --only         <deps>    - Check specified dependencies                                 
  -w, --write              - Write changes to local files            (Conflicts: --commit)
  -c, --commit             - Commit changes to local git repository  (Conflicts: --write) 
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)  
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)  
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)  
  --summary      <file>    - Write a summary of changes to file                           
  --report       <file>    - Write a report of changes to file                            

Examples:

  Check updates in a module:     molt deps.ts                               
  Include multiple modules:      molt mod.ts lib.ts                         
  Target all .ts files:          molt ./**/*.ts                             
  Specify an import map:         molt mod.ts --import-map deno.json         
  Ignore specified dependencies: molt deps.ts --ignore=deno_graph,node_emoji
  Check deno_std only:           molt deps.ts --only deno.land/std          

"
`;

snapshot[`molt 2`] = `
"  error: Missing argument(s): modules

"
`;

snapshot[`molt --help 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules

Options:

  -h, --help               - Show this help.                                              
  -v, --version            - Print version info.                                          
  --import-map   <file>    - Specify import map file                                      
  --ignore       <deps>    - Ignore dependencies                                          
  --only         <deps>    - Check specified dependencies                                 
  -w, --write              - Write changes to local files            (Conflicts: --commit)
  -c, --commit             - Commit changes to local git repository  (Conflicts: --write) 
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)  
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)  
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)  
  --summary      <file>    - Write a summary of changes to file                           
  --report       <file>    - Write a report of changes to file                            

Examples:

  Check updates in a module:     molt deps.ts                               
  Include multiple modules:      molt mod.ts lib.ts                         
  Target all .ts files:          molt ./**/*.ts                             
  Specify an import map:         molt mod.ts --import-map deno.json         
  Ignore specified dependencies: molt deps.ts --ignore=deno_graph,node_emoji
  Check deno_std only:           molt deps.ts --only deno.land/std          

"
`;

snapshot[`molt --help 2`] = `""`;

snapshot[`molt --version 1`] = `
"123.456.789
"
`;

snapshot[`molt --version 2`] = `
"Fetching version info
"
`;

snapshot[`molt not_exist.ts 1`] = `""`;

snapshot[`molt not_exist.ts 2`] = `
'❌ path does not exist: "not_exist.ts"
'
`;

snapshot[`molt test/data/import.ts 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/import.ts 0.200.0
"
`;

snapshot[`molt test/data/import.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/import_map/mod.ts 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/import_map/deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/import_map/deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  test/data/import_map/deno.json 1.0.0
"
`;

snapshot[`molt test/data/import_map/mod.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/import_map/mod.ts --import-map test/data/import_map/deno.json 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/import_map/deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/import_map/deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  test/data/import_map/deno.json 1.0.0
"
`;

snapshot[`molt test/data/import_map/mod.ts --import-map test/data/import_map/deno.json 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/import_map/deno.json 1`] = `""`;

snapshot[`molt test/data/import_map/deno.json 2`] = `
'❌ file must be javascript or typescript: "test/data/import_map/deno.json"
'
`;

snapshot[`molt test/data/import_map/mod.ts --import-map not_exist.json 1`] = `""`;

snapshot[`molt test/data/import_map/mod.ts --import-map not_exist.json 2`] = `
"Import map not_exist.json does not exist.
"
`;

snapshot[`molt test/data/multiple_imports.ts --ignore node-emoji 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_imports.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_imports.ts 0.50.0
"
`;

snapshot[`molt test/data/multiple_imports.ts --ignore node-emoji 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_imports.ts --ignore=deno_graph,node-emoji 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_imports.ts 0.200.0
"
`;

snapshot[`molt test/data/multiple_imports.ts --ignore=deno_graph,node-emoji 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_imports.ts --only deno.land/std 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_imports.ts 0.200.0
"
`;

snapshot[`molt test/data/multiple_imports.ts --only deno.land/std 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_imports.ts --only=deno.land/std,deno_graph 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_imports.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_imports.ts 0.50.0
"
`;

snapshot[`molt test/data/multiple_imports.ts --only=deno.land/std,deno_graph 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_imports.ts --only deno.land --ignore deno_graph 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_imports.ts 0.200.0
"
`;

snapshot[`molt test/data/multiple_imports.ts --only deno.land --ignore deno_graph 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --write 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

💾 test/data/multiple_modules/lib.ts
💾 test/data/multiple_modules/mod.ts
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --write 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --write --summary title.txt --report body.md 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

💾 test/data/multiple_modules/lib.ts
💾 test/data/multiple_modules/mod.ts

📄 title.txt
📄 body.md
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --write --summary title.txt --report body.md 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --prefix :package: 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

📝 :package: bump deno.land/std from 0.200.0 to 123.456.789
📝 :package: bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 :package: bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --prefix :package: 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --pre-commit=fmt --post-commit=lint 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task lint...

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task lint...

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task lint...
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --pre-commit=fmt --post-commit=lint 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --summary title.txt --report body.md 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789

📄 title.txt
📄 body.md
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --summary title.txt --report body.md 2`] = `
"Checking for updates
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --summary title.txt --pre-commit=fmt 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  test/data/multiple_modules/lib.ts 0.200.0
  test/data/multiple_modules/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/data/multiple_modules/mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  test/data/multiple_modules/mod.ts 2.0.0

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789

📄 title.txt
"
`;

snapshot[`molt test/data/multiple_modules/mod.ts --commit --summary title.txt --pre-commit=fmt 2`] = `
"Checking for updates
"
`;
